# PDMK4MC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  note.md  test.sh
.github/workflows/: ci.yml
accuracy/: dmk_energyshift_accuracy.cpp
benchmark/: accessing_tensor.cpp  direct_eval_benchmark.cpp  dmk_energy_runtime.cpp  dmk_energyshift_runtime.cpp  dmk_potential_runtime.cpp  dmk_prof.cpp  dmk_runtime.cpp  dmk_shift_runtime.cpp  ewald_potential_runtime.cpp  ewald_runtime.cpp  mc_accuracy.cpp  mc_runtime.cpp  multi_threads_Ewald.cpp  nudft_benchmark.cpp  potential_accuracy.cpp  vecops_benchmark.cpp
cmake/: dependencies.cmake
data/: dmk_energy_runtime.csv  dmk_energyshift_runtime.csv  dmk_potential_runtime.csv  dmk_runtime.csv  dmk_runtime_old.csv  dmk_shift_runtime.csv  ewald_potential_runtime.csv  ewald_runtime.csv  mc_accuracy.csv  mc_runtime.csv  particle_info.txt  potential_accuracy.csv
example/: dmk_energy.cpp
include/: chebychev.hpp  direct_eval.hpp  ewald.hpp  gemm.hpp  hpdmk.h  kernels.hpp  mdspan.hpp  nudft.hpp  pswf.hpp  shiftmat.hpp  tree.hpp  upward_pass.hpp  utils.hpp  vecops.hpp
plot/: Project.toml  energy_runtime.jl  energyshift_runtime.jl  plot_mc.jl  potential_runtime.jl
project/: CMakeLists.txt
project/ewald/: CMakeLists.txt
project/ewald/include/: ewald.h
project/ewald/src/: ewald.cpp
project/ewald/test/: ewald_test.cpp
src/: doctest.cpp  energy.cpp  energy_direct.cpp  energy_shift.cpp  ewald.cpp  hpdmk.cpp  kernels.cpp  planewave.cpp  pswf.cpp  tree.cpp  upward_pass.cpp  utils.cpp
test/: CMakeLists.txt  direct_eval_test.cpp  ewald_test.cpp  hpdmk_test.cpp  nudft_test.cpp  planewave_test.cpp  pswf_test.cpp  test_ewald.cpp  test_hpdmk.cpp  tree_test.cpp  utils_test.cpp  vecops_test.cpp
